<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="login_success">Login Success</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>

    <string name="exit">Exit</string>
    <string name="back_label">Back</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="enable_location">Enable Location </string>
    <string name="enable_dialog_message">Please enable Locations in the Settings </string>

    <string name="welcome_message">Welcome to the location reminder app</string>

    <!--Dialog String-->
    <string name="rationale_for_location_permissions">This App always needs Location Permission for best results. Please grant the permissions in the settings </string>
    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_point_of_interest_msg">Please pick a Point of Interest</string>
    <string name="unknown_geofence_error">Unknown Geofence Error</string>
    <string name="no_geofence">Geofence not found</string>
    <string name="too_many_geofences">Too many Geofences registered</string>
    <string name="too_many_pending_intents">Too many PendingIntents provided</string>
    <string name="transition_enter_found">GEOFENCE_TRANSITION_ENTER found</string>
    <string name="place_name">Place:</string>
    <string name="description_label">Description:</string>


</resources>
<!--AIzaSyDuoy-OJzPgi2kh24lRXMETQ0VaggemVuk-->